<resources>
    <string name="app_name">KDMC</string>
    <string name="app_name_mobydoctor">MOBY DOCTOR</string>
    <string name="hello_world">Hello world!</string>
    <string name="Category_A">A(Controlled studies in women fail to demonstrate a risk to the foetus in the 1st trimester (and there is no evidence of a risk in later trimesters), and the possibility of foetal harm remains remote)</string>
    <string name="Category_B">B(Either animal-reproduction studies have not demonstrated a foetal risk but there are no controlled studies in pregnant woman or animal-reproduction studies have shown an adverse effect (other than a decrease in fertility) that was not confirmed in controlled studies in women in the 1st trimester (and there is no evidence of a risk in later trimesters)).</string>
    <string name="Category_C">C(Either studies in animals have revealed adverse effects on the foetus (teratogenic or embryocidal or other) and there are no controlled studies in women or studies in woman and animals are not available. Drugs should be given only if the potential benefit justifies the potential risk to the foetus.)</string>
    <string name="Category_D">D(There is positive evidence of human foetal risk, but the benefits from use in pregnant woman may be acceptable despite the risk (e.g.,)if the drug is needed in a life-threatening situation or for a serious disease for which safer drugs cannot be used or are ineffective.))</string>
    <string name="Category_X">X(Studies in animals or human beings have demonstrated foetal abnormalities or there is evidence of foetal risk based on human experience or both, and the risk of the use of the drug in pregnant woman clearly outweighs any possible benefit. The drug is contraindicated in woman   who are or may become pregnant.The publishers of CIMS do not guarantee that the list  of drugs discussed in this index is comprehensive or that they have been approved by the DCGI and or that they are available in india.  This list is to be used only as an educational tool and the prescribers are hereby requested to clarify the information using their own sources before reaching any conclusion that directly influences their prescribing decision. The Publishers of CIMS, the authors, their agents and sellers are not responsible for any errors or ommissions arising from negligence or otherwise and the consequences arising therefrom.)</string>
    <string-array name="gender_options">
        <item>Select</item>
        <item>Male</item>
        <item>Female</item>
        <item>Transgender</item>
    </string-array>
    <string-array name="temperaturetime">
        <item>Select time</item>
        <item>8AM</item>
        <item>2PM</item>
        <item>8PM</item>
        <item>2AM</item>
    </string-array>
    <string-array name="temperaturecalculate">
        <item>Select temperature</item>
        <item>41   ℃   - 106 °F</item>
        <item>40.5 ℃   - 105 °F</item>
        <item>40   ℃   - 104 °F</item>
        <item>39.5 ℃   - 103 °F</item>
        <item>39   ℃   - 102 °F</item>
        <item>38.5 ℃   - 101 °F</item>
        <item>38   ℃   - 100 °F</item>
        <item>37.5 ℃   - 99  °F</item>
        <item>37   ℃   - 98.4 °F</item>
        <item>36.5 ℃   - 98  °F</item>
        <item>36   ℃   - 97  °F</item>
        <item>35.5 ℃   - 96  °F</item>
        <item>35   ℃   - 95  °F</item>
    </string-array>
    <string-array name="temperaturecalc">
        <item>Select temperature</item>
        <item>106 °F</item>
        <item>105 °F</item>
        <item>104 °F</item>
        <item>103 °F</item>
        <item>102 °F</item>
        <item>101 °F</item>
        <item>100 °F</item>
        <item>99  °F</item>
        <item>98.4 °F</item>
        <item>98  °F</item>
        <item>97  °F</item>
        <item>96  °F</item>
        <item>95  °F</item>
    </string-array>
    <string name="txt_yes">Yes</string>
    <string name="txt_no">No</string>
    <string name="txt_left">Left</string>
    <string name="txt_right">Right</string>
    <string name="txt_normal">Normal</string>
    <string name="txt_enlarged">Enlarged</string>
    <string name="txt_increase">Increased</string>
    <string name="txt_decrease">Decreased</string>
    <string name="txt_reduced">Reduced</string>
    <string name="txt_present">Present</string>
    <string name="txt_absent">Absent</string>
    <string-array name="syrup_measure">
        <item>Select</item>
        <item>1 ml</item>
        <item>2 ml</item>
        <item>5 ml</item>
        <item>10 ml</item>
        <item>15 ml</item>
        <item>20 ml</item>
        <item>30 ml</item>
    </string-array>
    <string-array name="drops_measure">
        <item>Select</item>
        <item>1 drop</item>
        <item>2 drops</item>
        <item>3 drops</item>
        <item>4 drops</item>
        <item>5 drops</item>
        <item>6 drops</item>
        <item>7 drops</item>
        <item>8 drops</item>
        <item>9 drops</item>
        <item>10 drops</item>
        <item>11 drops</item>
        <item>12 drops</item>
        <item>13 drops</item>
        <item>14 drops</item>
        <item>15 drops</item>
        <item>16 drops</item>
        <item>17 drops</item>
        <item>18 drops</item>
        <item>19 drops</item>
        <item>20 drops</item>
        <item>21 drops</item>
        <item>22 drops</item>
        <item>23 drops</item>
        <item>24 drops</item>
        <item>25 drops</item>
        <item>26 drops</item>
        <item>27 drops</item>
        <item>28 drops</item>
        <item>29 drops</item>
        <item>30 drops</item>
    </string-array>
    <string-array name="oint_measure">
        <item>Select</item>
        <item>1 tube</item>
        <item>2 tube</item>
        <item>3 tube</item>
        <item>4 tube</item>
        <item>5 tube</item>
        <item>6 tube</item>
        <item>7 tube</item>
        <item>8 tube</item>
        <item>9 tube</item>
        <item>10 tube</item>
        <item>11 tube</item>
        <item>12 tube</item>
        <item>13 tube</item>
        <item>14 tube</item>
        <item>15 tube</item>
        <item>16 tube</item>
        <item>17 tube</item>
        <item>18 tube</item>
        <item>19 tube</item>
        <item>20 tube</item>
        <item>21 tube</item>
        <item>22 tube</item>
        <item>23 tube</item>
        <item>24 tube</item>
        <item>25 tube</item>
        <item>26 tube</item>
        <item>27 tube</item>
        <item>28 tube</item>
        <item>29 tube</item>
        <item>30 tube</item>
    </string-array>
    <string name="frequency">Frequency</string>
    <string name="nextvisiton">Next Visit On</string>
    <string-array name="prefix">
        <item>Mr.</item>
        <item>Dr.</item>
        <item>Master</item>
        <item>Mrs.</item>
        <item>Miss.</item>
        <item>Baby.</item>
        <item>Tgr</item>
    </string-array>
    <string-array name="age_range">
        <item>0</item>
        <item>1–10</item>
        <item>21–30</item>
        <item>31–40</item>
        <item>41–50</item>
        <item>51–60</item>
        <item>61–70</item>
        <item>71–80</item>
        <item>81–90</item>
        <item>91–100</item>
    </string-array>
    <string-array name="prefix1">
        <item>Mr.</item>
        <item>Dr.</item>
    </string-array>
    <string name="phone">Phone</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="saving_image">Saving image</string>
    <string name="no_storage_card">No storage card</string>
    <string name="not_enough_space">Not enough space</string>
    <string name="preparing_card">Preparing card</string>
    <string name="age">Age</string>
    <string name="addrs">Address</string>
    <string name="prevmed">Previous Medical History</string>
    <string name="add_prevmed">Previous Medical History</string>
    <string name="submit">Submit</string>
    <string name="entrpname">Patient Name*</string>
    <string name="ptntphotoprvw">Patient Photo Preview</string>
    <string name="clinicname">Clinic Name</string>
    <string name="gender">Gender</string>
    <string name="dddignodtls">Provisional Diagnosis*</string>
    <string name="docemail">Email Id*</string>
    <string name="prpname">Patient Name</string>
    <string name="country">Country</string>
    <string name="lblpostalcode">Pincode</string>
    <string name="lblallergy">Allergic To</string>
    <string name="doctorname">Doctor Name*</string>
    <string name="drrefremarks">Remarks</string>
    <string name="bodytemp">Temperature(ºF)</string>
    <string name="medicinename">Medicine Name</string>
    <string name="lblfreq">Frequency</string>
    <string name="city">City</string>
    <string name="title_activity_my_patient">MyPatient</string>
    <string name="title_activity_setting">Settings</string>
    <string name="title_activity_reports">ReportsActivity</string>
    <string name="title_activity_report__dailyconsulation">ReportDailyconsulation</string>
    <string name="title_activity_report_fee_collection">FeeCollectionReport</string>
    <string name="title_activity_report__list_of_test_prescribed">ListOfTestPrescribed</string>
    <string name="title_activity_report__list_of_medicine_prescribed">ListOfTestMedicinePrescribed</string>
    <string name="title_activity_report__list_of_donor">ListOfDonors</string>
    <string name="title_inpatient">Inpatient</string>
    <string name="title_activity_report__list_of_newpatient">New Patient Register</string>
    <string name="title_activity_templates_list">Templates List</string>
    <string name="title_activity_templates_new">Templates Add New</string>
    <string name="title_activity_inpatient__display">Inpatient_Display</string>
    <string name="txt_footer">Powered by Devatech Info Systems Pvt. Ltd.</string>
    <string name="title_reports1">Daily Consulation Report</string>
    <string name="title_reports2">New Patient Register</string>
    <string name="title_reports3">Specialist Referral Report</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="investigation">Investigations</string>
    <string name="prescription">Prescription</string>
    <string name="cardio_vascular_system">Cardio Vascular System</string>
    <string name="heart_rate">Heart rate</string>
    <string name="others">Others</string>
    <string name="provisional_diagnosis">Provisional Diagnosis</string>
    <string name="pulse_rate">Pulse Rate :</string>
    <string name="murmur">Murmur :</string>
    <string name="beat">Beat :</string>
    <string name="select_date">Select date</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="clinical_notes">Clinical Notes</string>
    <string name="treatment_and_diet">Treatment and Diet</string>
    <string name="s1">S1</string>
    <string name="s2">S2</string>
    <string name="s3">S3</string>
    <string name="s4">S4</string>
    <string name="systolic">Systolic</string>
    <string name="diastolic">Diastolic</string>
    <string name="pericardial_rub">Pericardial Rub :</string>
    <string name="regular">Regular</string>
    <string name="irregular">Irregular</string>
    <string name="immunization_history">Immunization History</string>
    <string name="undert_care_of">Under care of *</string>
    <string name="student">Student *</string>
    <string name="student_name">Enter student name</string>
    <string name="final_diagnosis">Final Diagnosis *</string>
    <string name="select_result">Select Result *</string>
    <string name="patient_info">Patient Info</string>
    <string name="casenotes">Case Notes</string>
    <string name="patient_uploaded_reports">Patient Uploaded Reports</string>
    <string name="inpatient_summary">Inpatient Summary</string>
    <string name="pdfreports">PDF Reports</string>
    <string name="todo">TODO</string>
    <string name="hide">HIDE</string>
</resources>