<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/undert_care_of"
                android:textColor="#003f72" />

            <Spinner
                android:id="@+id/mc_under_care_sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/mc_sp_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/student"
                    android:textColor="#003f72" />

                <EditText
                    android:id="@+id/mc_student_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/student_name"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/provisional_diagnosis"
                    android:textColor="#003f72" />

                <EditText
                    android:id="@+id/mc_provisional_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/provisional_diagnosis"
                    android:inputType="text" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/final_diagnosis"
                android:textColor="#003f72" />

            <EditText
                android:id="@+id/mc_finaldiagnosis_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/final_diagnosis"
                android:inputType="text" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/select_result"
            android:textColor="#003f72" />

        <Spinner
            android:id="@+id/mc_result_spn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#003f72">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="#ffffff"
                android:orientation="vertical"
                android:padding="5dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textColor="#003f72" />

                    <EditText
                        android:id="@+id/mc_date_edt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:focusable="false"
                        android:hint="@string/select_date"
                        android:inputType="text" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/time"
                        android:textColor="#003f72" />

                    <Spinner
                        android:id="@+id/mc_select_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />


                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:text="@string/clinical_notes"
                    android:textColor="#003f72" />

                <EditText
                    android:id="@+id/mc_clinicalnotes_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:hint="@string/clinical_notes"
                    android:inputType="text" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:text="@string/treatment_and_diet"
                    android:textColor="#003f72" />

                <EditText
                    android:id="@+id/mc_treatmentdiet_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:hint="@string/treatment_and_diet"
                    android:inputType="text" />


                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:background="@null"
                    app:srcCompat="@drawable/collapse_plus" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="250dp">

                    <LinearLayout

                        android:id="@+id/medical_case_records"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                    </LinearLayout>


                </ScrollView>


            </LinearLayout>
        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:padding="5dp">

            <Button
                android:id="@+id/mc_submit_btn"
                style="@style/PositiveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/save" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>